objects/nArchive__nArchive__c.object
<CustomObject>
    <description>Document Export Service</description>
    <fields>
        <fullName>ProcessId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>ProcessId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nArchive__AccountDocument__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associated Account Document</description>
        <label>Associated Account Document</label>
        <referenceTo>LLC_BI__AccountDocument__c</referenceTo>
        <relationshipLabel>Related Account Document</relationshipLabel>
        <relationshipName>nArchive</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nArchive__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associated Account</description>
        <label>Associated Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Related Account</relationshipLabel>
        <relationshipName>nArchive</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nArchive__Attachment_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Attachment Id (Deprecated).</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Attachment_Id-D</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>nArchive__Current_Attachment_Id__c</fullName>
        <description>Current Attachment Id</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Current Attachment Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nArchive__Date_Processed__c</fullName>
        <description>This field contains the timestamp of the Document Export record.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Processed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>nArchive__DocumentName__c</fullName>
        <description>Document Name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Document Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nArchive__Document_Placeholder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associated Document Placeholder</description>
        <label>Associated Document Placeholder</label>
        <referenceTo>LLC_BI__Document_Placeholder__c</referenceTo>
        <relationshipLabel>Related Document Placeholder</relationshipLabel>
        <relationshipName>nArchive</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nArchive__File_Extension__c</fullName>
        <description>The system populates this required text field with the ContentVersion FileExtension. By default, it is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>File Extension</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nArchive__File_Size__c</fullName>
        <description>The system populates this required number field with the ContentVersion FileSize. By default, it is blank.</description>
        <label>File Size</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nArchive__LLC_LoanDocument__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associated Loan Document Placeholder</description>
        <label>Associated Loan Document Placeholder</label>
        <referenceTo>LLC_BI__LLC_LoanDocument__c</referenceTo>
        <relationshipLabel>Related Loan Document Placeholder</relationshipLabel>
        <relationshipName>nArchive</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nArchive__Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associated Loan</description>
        <label>Associated Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipLabel>Related Loan</relationshipLabel>
        <relationshipName>nArchive</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nArchive__UID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Attachment Id + DocId</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Unique Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>nArchive__isFaultedDescription__c</fullName>
        <description>The system automatically populate(s) this text field to describe fault information.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Faulted Details</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>nArchive__isFaulted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The system automatically populate(s) this boolean field to indicate a fault in processing the record.</description>
        <label>Faulted Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nArchive__missingAttachment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate the assocated Attachment record is missing from the Placeholder</description>
        <label>Missing Attachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nArchive__processdBatchNumber__c</fullName>
        <description>Processed Batch Number, generated by IICS task.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Processed Batch Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nArchive__processedFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate the DES record has been processed.</description>
        <label>Processed Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nArchive__reprocessFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate that the record should be Reprocessed.</description>
        <label>Reprocess Flag</label>
        <type>Checkbox</type>
    </fields>
    <label>Document Export Service</label>
    <listViews>
        <fullName>nArchive__All</fullName>
        <columns>NAME</columns>
        <columns>nArchive__Current_Attachment_Id__c</columns>
        <columns>nArchive__Account__c</columns>
        <columns>nArchive__AccountDocument__c</columns>
        <columns>nArchive__Loan__c</columns>
        <columns>nArchive__LLC_LoanDocument__c</columns>
        <columns>nArchive__processedFlag__c</columns>
        <columns>nArchive__UID__c</columns>
        <columns>nArchive__Document_Placeholder__c</columns>
        <columns>nArchive__DocumentName__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>nArchive Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Export Service</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>